# sosia

./: AUTHORS.rst  CHANGES.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  conftest.py  pyproject.toml  requirements.txt  setup.cfg  test.sh
docs/: conf.py  functioning.rst  index.rst  installation.rst  reference.rst  requirements.txt  tutorial.rst
docs/reference/: sosia.Original.rst
docs/tutorial/: auxiliary.rst  debug.rst  installation.rst  refining.rst  setup.rst  usage.rst
meta/: CHANGES.rst
sosia/: README.md  __init__.py  sosia.py  utils.py
sosia/cache/: __init__.py  insert.py  search.py
sosia/cache/tests/: test_search.py
sosia/classes/: __init__.py  disambiguator.py  original.py  scientist.py
sosia/classes/tests/: test_Disambiguator.py  test_Original.py  test_Scientist.py
sosia/establishing/: __init__.py  config.py  constants.py  database.py  fields_sources.py  logger.py
sosia/establishing/tests/: test_database.py  test_fields_sources.py
sosia/filtering/: __init__.py  filtering.py
sosia/filtering/tests/: test_filtering.py
sosia/processing/: README.md  __init__.py  caching.py  constants.py  extracting.py  extraction.py  filtering.py  finding.py  getting.py  initializing.py  nlp.py  queries.py  querying.py  utils.py
sosia/processing/caching/: __init__.py  inserting.py  retrieving.py  utils.py
sosia/processing/caching/tests/: test_retrieving.py
sosia/processing/tests/: test_caching.py  test_extracting.py  test_extraction.py  test_filtering.py  test_finding.py  test_getting.py  test_initializing.py  test_nlp.py  test_queries.py  test_querying.py  test_utils.py
sosia/tests/: README.md  __init__.py  test_Original.py  test_utils.py
sosia/utils/: __init__.py  cache.py  constants.py  decorators.py  defaults.py  helpers.py  logger.py  nlp.py  queries.py  startup.py
sosia/utils/tests/: test_helpers.py  test_nlp.py  test_queries.py  test_startup.py
