[metadata]
name = sosia
author = Stefano H. Barruffaldi and Michael E. Rose
author-email = Michael.Ernst.Rose@gmail.com
maintainer = Michael E. Rose
maintainer-email = Michael.Ernst.Rose@gmail.com
summary = Find control groups for academics in Scopus
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    sosia

[files]
packages =
    sosia
    sosia.utils

[bdist_wheel]
universal=1
